добавление блока с советами

--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@
       </section>
 
       <section class="kaufman">
+        
         <h1 class="section-title section-title__theme_dark">Принципы обучения</h1>
           <h3 class="section-subtitle section-subtitle__theme_dark">от Джоша Кауфмана</h3>
 
-        <div class="table table__theme_dark" id="digits_grid">
+        <div class="table table__theme_dark" id="digits_grid_dark">
           <div class="table_cell table_cell__theme_dark">
             <h4 class="table_heading table_heading__theme_dark">1</h4>
             <p class="table_text table_text__theme_dark">Выберите привлекательный проект.</p>
@@ -141,18 +142,49 @@
           </div>
           <div class="table_cell table_cell__theme_dark">
             <h4 class="table_heading table_heading__theme_dark">9</h4>
-            <p class="table_text table_text__theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <p class="table_text table_text__theme_dark">Занимайтесь по расписанию, короткими интервалами.</p>
           </div>
           <div class="table_cell table_cell__theme_dark">
             <h4 class="table_heading table_heading__theme_dark">10</h4>
-            <p class="table_text table_text__theme_dark">Уделяйте внимение уоличеству и скорости</p>
+            <p class="table_text table_text__theme_dark">Уделяйте внимение количеству и скорости</p>
+          
           </div>
+          <img class="kaufman_triangle" src="images/kaufman-triangle.svg" alt="синий треугольник">
         </div>
-        <div class="kaufman_triangle"></div>
       </section>
     </main>
     <footer class="footer">
-
+        <div class="footer_columns">
+          <div class="footer_column__content_copyright">
+            <div class=" logo logo_place_footer"></div>
+            <h4 class="footer_autor">Виктор Абанькин</h4>
+          </div>
+          <div class="footer_column__content_info">
+            <h4 class="footer_column-heading">О практикуме</h4>
+            <div class="footer_column-links">
+              <h5 class="footer_column_link">Главная</h5>
+              <h5 class="footer_column_link">Концепция</h5>
+              <h5 class="footer_column_link">Наставники</h5>
+            </div>
+          </div>
+          <div class="footer_column__content_social">
+            <h4 class="footer_column-heading">Соцсети</h4>
+            <div class="footer_column-links">
+              <div>
+                <img class="footer_social_icon" src="images/youtube_color_white.svg" alt="логотип YouTobe">
+                <h5 class="footer_column_link">YouTube</h5>
+              </div>
+              <div>
+                <img class="footer_social_icon" src="images/vk_color_white.svg" alt="логотип Вконтакте">
+                <h5 class="footer_column_link">Вконтакте</h5>
+              </div>
+              <div>
+                <img class="footer_social_icon" src="images/tiktok_color_white.svg" alt="логотип TikTok">
+                <h5 class="footer_column_link">TikTok</h5>
+              </div>
+            </div>
+          </div>
+        </div>
     </footer>
   </div>
 </body>
