--- a/index.html
+++ b/index.html
@@ -156,32 +156,23 @@
     <footer class="footer">
         <div class="footer_columns">
           <div class="footer_column__content_copyright">
-            <div class=" logo logo_place_footer"></div>
-            <h4 class="footer_autor">Виктор Абанькин</h4>
+            <div class=" logo logo_place_footer" ></div>
+            <h4 class="footer_autor"> &copy Виктор Абанькин</h4>
           </div>
           <div class="footer_column__content_info">
             <h4 class="footer_column-heading">О практикуме</h4>
             <div class="footer_column-links">
-              <h5 class="footer_column_link">Главная</h5>
-              <h5 class="footer_column_link">Концепция</h5>
-              <h5 class="footer_column_link">Наставники</h5>
+              <a class="footer_column_link">Главная</a>
+              <a class="footer_column_link">Концепция</a>
+              <a class="footer_column_link">Наставники</a>
             </div>
           </div>
           <div class="footer_column__content_social">
             <h4 class="footer_column-heading">Соцсети</h4>
             <div class="footer_column-links">
-              <div>
-                <img class="footer_social_icon" src="images/youtube_color_white.svg" alt="логотип YouTobe">
-                <h5 class="footer_column_link">YouTube</h5>
-              </div>
-              <div>
-                <img class="footer_social_icon" src="images/vk_color_white.svg" alt="логотип Вконтакте">
-                <h5 class="footer_column_link">Вконтакте</h5>
-              </div>
-              <div>
-                <img class="footer_social_icon" src="images/tiktok_color_white.svg" alt="логотип TikTok">
-                <h5 class="footer_column_link">TikTok</h5>
-              </div>
+                <a class="footer_column_link"><img class="footer_social_icon" src="images/youtube_color_white.svg" alt="логотип YouTobe">YouTube</a>
+                <a class="footer_column_link"><img class="footer_social_icon" src="images/vk_color_white.svg" alt="логотип Вконтакте">Вконтакте</a>
+                <a class="footer_column_link"><img class="footer_social_icon" src="images/tiktok_color_white.svg" alt="логотип TikTok">TikTok</a>
             </div>
           </div>
         </div>
